[gd_scene load_steps=37 format=3 uid="uid://c7n4o6dbkwilh"]

[ext_resource type="Script" path="res://Scenes_and_scripts/Levels/World.gd" id="1"]
[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_6ope2"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/ShaderControl.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://besym8haj5qo4" path="res://Scenes_and_scripts/UI/Crosshair.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://dvmhtrrnuhqrj" path="res://Textures/UI/grid_outline.png" id="3_fi1kg"]
[ext_resource type="PackedScene" uid="uid://cv6hlxtiukmtc" path="res://Scenes_and_scripts/UI/VisionButtons/vision_buttons.tscn" id="3_hqsoq"]
[ext_resource type="PackedScene" uid="uid://pgnduadnvgfx" path="res://Scenes_and_scripts/Diagram/StateLine.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://c2myqhjupqo25" path="res://Textures/Background/tile.png" id="4_k4tjo"]
[ext_resource type="PackedScene" uid="uid://bhi4xq3qdbt4d" path="res://Scenes_and_scripts/Diagram/interaction.tscn" id="6_aqbiw"]
[ext_resource type="PackedScene" uid="uid://b22nw60juoc6k" path="res://Scenes_and_scripts/Diagram/particle_line.tscn" id="7_sgp8p"]
[ext_resource type="StyleBox" uid="uid://bubm5sx3xn6q5" path="res://Resources/Themes/TitleLabel.tres" id="7_yb0gu"]
[ext_resource type="Texture2D" uid="uid://doyaei3vq3cbb" path="res://Textures/Background/state_line_shadow_top.png" id="8_fwvkc"]
[ext_resource type="Script" path="res://Scenes_and_scripts/Levels/Title.gd" id="8_moevd"]
[ext_resource type="Texture2D" uid="uid://basekc2ce6rmp" path="res://Textures/Background/state_line_shadow_tile.png" id="9_075jn"]
[ext_resource type="Script" path="res://Scenes_and_scripts/Diagram/main_diagram.gd" id="17_23v64"]
[ext_resource type="PackedScene" uid="uid://bbkvwth6ke1is" path="res://Scenes_and_scripts/UI/Menus/problem_tab.tscn" id="20_uaeg6"]
[ext_resource type="PackedScene" uid="uid://bgvo11j4kfjdc" path="res://Scenes_and_scripts/UI/Menus/generation_button.tscn" id="22_u64s1"]
[ext_resource type="Texture2D" uid="uid://bvc8sakoqg037" path="res://Textures/Background/background_border.png" id="23_ebvm0"]
[ext_resource type="PackedScene" uid="uid://deuhqxgq1bveq" path="res://Scenes_and_scripts/UI/Menus/PuzzleUI.tscn" id="23_v0dtx"]
[ext_resource type="PackedScene" uid="uid://wgw4km4uc7fh" path="res://Scenes_and_scripts/UI/Menus/menu_tab.tscn" id="24_f5s2a"]
[ext_resource type="PackedScene" uid="uid://ds2iet11sv3ty" path="res://Scenes_and_scripts/UI/Buttons/particle_buttons.tscn" id="24_lunb1"]
[ext_resource type="PackedScene" uid="uid://dh7y3g5jhluwj" path="res://Scenes_and_scripts/UI/Menus/export_tab.tscn" id="27_jfab7"]
[ext_resource type="PackedScene" uid="uid://dcpcxfh7umytq" path="res://Scenes_and_scripts/UI/MiniDiagram/mini_diagram_viewer.tscn" id="27_laye5"]
[ext_resource type="Script" path="res://Scenes_and_scripts/Levels/Tutorial.gd" id="28_soh5r"]
[ext_resource type="PackedScene" uid="uid://bjmi5sukccoma" path="res://Scenes_and_scripts/tutorial/TutorialInfo.tscn" id="30_2684v"]
[ext_resource type="PackedScene" uid="uid://dxeg8j8rmil8t" path="res://Scenes_and_scripts/UI/Menus/health_tab.tscn" id="31_f28gh"]
[ext_resource type="Script" path="res://Scenes_and_scripts/Levels/Hadrons.gd" id="31_rb52u"]
[ext_resource type="Script" path="res://Scenes_and_scripts/tutorial/TutorialStep.gd" id="31_t51na"]
[ext_resource type="PackedScene" uid="uid://cv1hcrp0bkj2o" path="res://Scenes_and_scripts/Diagram/decoration.tscn" id="33_8ahpc"]
[ext_resource type="Texture2D" uid="uid://bhbno8fhsgyg8" path="res://Scenes_and_scripts/UI/face.png" id="34_w3m6h"]
[ext_resource type="Texture2D" uid="uid://b3j24x3p00ruh" path="res://Textures/Background/fake_tile.png" id="34_ytvfy"]
[ext_resource type="PackedScene" uid="uid://b65u1c7v5mbh6" path="res://Scenes_and_scripts/UI/Menus/controls_tab.tscn" id="38_h5txr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vcfy5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3sii"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2v8fu"]
texture = ExtResource("3_fi1kg")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dacp6"]

[node name="World" type="Node2D" groups=["level"]]
material = ExtResource("1_6ope2")
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
use_parent_material = true
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2
texture = ExtResource("4_k4tjo")
stretch_mode = 1

[node name="TileEasterEgg" type="Node2D" parent="."]
use_parent_material = true

[node name="Face" type="Sprite2D" parent="TileEasterEgg"]
use_parent_material = true
position = Vector2(40, 296)
texture = ExtResource("34_w3m6h")

[node name="Decoration" parent="TileEasterEgg" instance=ExtResource("33_8ahpc")]
z_index = 0
use_parent_material = true
custom_minimum_size = Vector2(18, 18)
offset_left = 31.0
offset_top = 287.0
offset_right = 49.0
offset_bottom = 305.0
texture = ExtResource("34_ytvfy")
decor = 0

[node name="Diagram" type="Panel" parent="." node_paths=PackedStringArray("Title")]
use_parent_material = true
offset_left = 96.0
offset_top = 48.0
offset_right = 544.0
offset_bottom = 304.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_vcfy5")
script = ExtResource("17_23v64")
Title = NodePath("TitleContainer/Title")
grid_size = 16
InteractionInstance = ExtResource("6_aqbiw")
particle_line_scene = ExtResource("7_sgp8p")

[node name="TitleContainer" type="PanelContainer" parent="Diagram"]
use_parent_material = true
layout_mode = 0
offset_left = 174.0
offset_top = -18.0
offset_right = 270.0
offset_bottom = 2.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_o3sii")

[node name="Title" type="LineEdit" parent="Diagram/TitleContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/read_only = ExtResource("7_yb0gu")
theme_override_styles/normal = ExtResource("7_yb0gu")
placeholder_text = "[Enter Optional Title]"
alignment = 1
expand_to_text_length = true
script = ExtResource("8_moevd")

[node name="GridTiles" type="TextureRect" parent="Diagram"]
use_parent_material = true
layout_mode = 0
offset_right = 448.0
offset_bottom = 256.0
texture = ExtResource("4_k4tjo")
stretch_mode = 1

[node name="Outline" type="Panel" parent="Diagram"]
use_parent_material = true
layout_mode = 0
offset_right = 448.0
offset_bottom = 256.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2v8fu")

[node name="DiagramArea" type="Panel" parent="Diagram"]
use_parent_material = true
layout_mode = 0
offset_left = 64.0
offset_right = 384.0
offset_bottom = 256.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_dacp6")

[node name="InitialShadow" type="VBoxContainer" parent="Diagram/DiagramArea"]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.0
offset_top = 1.0
offset_right = -156.0
offset_bottom = 255.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Top" type="TextureRect" parent="Diagram/DiagramArea/InitialShadow"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("8_fwvkc")
stretch_mode = 2

[node name="Middle" type="TextureRect" parent="Diagram/DiagramArea/InitialShadow"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("9_075jn")
stretch_mode = 1

[node name="Bottom" type="TextureRect" parent="Diagram/DiagramArea/InitialShadow"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("8_fwvkc")
stretch_mode = 2
flip_h = true
flip_v = true

[node name="FinalShadow" type="VBoxContainer" parent="Diagram/DiagramArea"]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 156.0
offset_top = 1.0
offset_right = 164.0
offset_bottom = 255.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Top" type="TextureRect" parent="Diagram/DiagramArea/FinalShadow"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("8_fwvkc")
stretch_mode = 2

[node name="Middle" type="TextureRect" parent="Diagram/DiagramArea/FinalShadow"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("9_075jn")
stretch_mode = 1

[node name="Bottom" type="TextureRect" parent="Diagram/DiagramArea/FinalShadow"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("8_fwvkc")
stretch_mode = 2
flip_h = true
flip_v = true

[node name="Initial" parent="Diagram/DiagramArea" instance=ExtResource("4")]
use_parent_material = true
layout_mode = 2
offset_top = -12.0
offset_bottom = 28.0

[node name="Line" parent="Diagram/DiagramArea/Initial" index="0"]
offset_bottom = 280.0

[node name="Final" parent="Diagram/DiagramArea" instance=ExtResource("4")]
use_parent_material = true
layout_mode = 2
offset_left = 320.0
offset_top = -12.0
offset_right = 320.0
offset_bottom = -12.0
state = 1

[node name="Line" parent="Diagram/DiagramArea/Final" index="0"]
offset_bottom = 280.0

[node name="Crosshair" parent="Diagram/DiagramArea" instance=ExtResource("3")]
use_parent_material = true
position = Vector2(-160, -48)
grid_margin = 0

[node name="ParticleLines" type="Node2D" parent="Diagram/DiagramArea"]
use_parent_material = true

[node name="VisionLines" type="Control" parent="Diagram/DiagramArea"]
use_parent_material = true
anchors_preset = 0

[node name="Interactions" type="Node2D" parent="Diagram/DiagramArea"]
use_parent_material = true

[node name="HadronJoints" type="Control" parent="Diagram/DiagramArea"]
use_parent_material = true
anchors_preset = 0

[node name="GridOutline" type="NinePatchRect" parent="."]
z_index = 10
use_parent_material = true
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("23_ebvm0")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="PullOutTabs" type="Node2D" parent="."]
z_index = 3
use_parent_material = true

[node name="ControlsTab" parent="PullOutTabs" instance=ExtResource("38_h5txr")]
offset_left = 2.0
offset_top = -41.0
offset_right = 2.0
offset_bottom = -41.0

[node name="VisionButton" parent="PullOutTabs" instance=ExtResource("3_hqsoq")]
offset_left = 612.0
offset_top = 45.0
offset_right = 634.0
offset_bottom = 105.0

[node name="ParticleButtons" parent="PullOutTabs" instance=ExtResource("24_lunb1")]
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 159.0
offset_top = 340.0
offset_right = 159.0
offset_bottom = 340.0
grow_vertical = 0
size_flags_horizontal = 4

[node name="PuzzleUI" parent="PullOutTabs" instance=ExtResource("23_v0dtx")]
offset_left = -143.0
offset_top = 159.0
offset_right = -143.0
offset_bottom = 159.0

[node name="GenerationButton" parent="PullOutTabs" instance=ExtResource("22_u64s1")]
offset_left = -144.0
offset_top = 59.0
offset_right = -144.0
offset_bottom = 59.0

[node name="ProblemTab" parent="PullOutTabs" instance=ExtResource("20_uaeg6")]
use_parent_material = true
offset_left = 157.0
offset_top = -26.0
offset_right = 157.0
offset_bottom = -26.0

[node name="MenuTab" parent="PullOutTabs" instance=ExtResource("24_f5s2a")]
offset_left = 515.0
offset_top = 339.0
offset_right = 515.0
offset_bottom = 339.0

[node name="HealthTab" parent="PullOutTabs" instance=ExtResource("31_f28gh")]
offset_left = 501.0
offset_top = -39.0
offset_right = 501.0
offset_bottom = -39.0
move_direction = 3

[node name="ExportTab" parent="PullOutTabs" instance=ExtResource("27_jfab7")]
z_index = 1
offset_left = 613.0
offset_top = 134.0
offset_right = 613.0
offset_bottom = 134.0

[node name="FloatingMenus" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SubmittedDiagrams" parent="FloatingMenus" node_paths=PackedStringArray("BigDiagram") instance=ExtResource("27_laye5")]
visible = false
offset_left = 316.0
offset_top = 160.0
offset_right = 316.0
offset_bottom = 160.0
allow_resaving = true
title = "Submitted Diagrams"
BigDiagram = NodePath("../../Diagram")

[node name="GeneratedDiagrams" parent="FloatingMenus" node_paths=PackedStringArray("BigDiagram") instance=ExtResource("27_laye5")]
visible = false
offset_left = 316.0
offset_top = 160.0
offset_right = 316.0
offset_bottom = 160.0
title = "Generated Diagrams"
BigDiagram = NodePath("../../Diagram")

[node name="ShaderControl" type="Node" parent="."]
script = ExtResource("2")

[node name="vision_manager" type="Node" parent="."]

[node name="Tutorial" type="CanvasLayer" parent="." node_paths=PackedStringArray("TutorialInfo", "ProblemTab")]
visible = false
follow_viewport_enabled = true
script = ExtResource("28_soh5r")
TutorialInfo = NodePath("TutorialInfo")
ProblemTab = NodePath("../PullOutTabs/ProblemTab")

[node name="CanvasGroup" type="CanvasGroup" parent="Tutorial"]

[node name="Shadow" type="ColorRect" parent="Tutorial/CanvasGroup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.431373)
metadata/_edit_lock_ = true

[node name="Spotlights" type="Control" parent="Tutorial/CanvasGroup"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="TutorialInfo" parent="Tutorial" instance=ExtResource("30_2684v")]

[node name="Steps" type="Node" parent="Tutorial"]

[node name="Welcome" type="Node" parent="Tutorial/Steps"]
script = ExtResource("31_t51na")
text = "Welcome to FeynCraft! Here you will be able to draw, create, and generate Feynman diagram problems.

Press next below to get started."

[node name="FloatingMenus" type="Node" parent="Tutorial/Steps"]
script = ExtResource("31_t51na")
text = "There are a few floating menus in the game (such as this one), these can be moved by holding either W or the move button, and dragging.

Press next after trying this out."

[node name="ParticleSelection" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "These are your particles. To select one to draw, first press the category to open it, then press on a particle button. Then press next."
FocusObjects = [NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Leptons/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Bosons/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Quarks/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/General/MovingContainer")]

[node name="Diagram" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "Particles can only be drawn within the diagram area, on and between the initial and final state lines.

Particles are drawn by clicking and dragging.

Try drawing some particles, then press next."
FocusObjects = [NodePath("../../../Diagram"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Leptons/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/General/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Bosons/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Quarks/MovingContainer")]

[node name="Interactions" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "Interactions are created by joining particles.

The number of dots shown is its 'degree'.

Interactions can be moved by holding W and dragging.

They can be split apart by holding Shift and dragging.

You can also delete lines and interactions by holding X and clicking.

Press next when ready.

"
FocusObjects = [NodePath("../../../Diagram"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Leptons/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/General/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Bosons/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Quarks/MovingContainer")]
DiagramFilePath = "res://saves/Diagrams/interactions.tres"

[node name="InteractionInformation" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "Invalid interactions are marked in red, to find out why, you can press on (any) interaction to see more information.

Press next when ready."
FocusObjects = [NodePath("../../../Diagram"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Leptons/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/General/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Bosons/MovingContainer"), NodePath("../../../PullOutTabs/ParticleButtons/HBoxContainer/Quarks/MovingContainer")]
DiagramFilePath = "res://saves/Diagrams/invalid_interactions.tres"

[node name="ProblemTab" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "This is the problem tab, open it, then press next."
FocusObjects = [NodePath("../../../PullOutTabs/ProblemTab/MovingContainer/VBoxContainer/PullOutTabButtonDown")]

[node name="Problem" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "This is the current problem you need to draw a diagram for, as well as the required degree.

Press next."
FocusObjects = [NodePath("../../../PullOutTabs/ProblemTab/MovingContainer/VBoxContainer/Tab/HBoxContainer/Equation"), NodePath("../../../PullOutTabs/ProblemTab/MovingContainer/VBoxContainer/Tab/HBoxContainer/DegreeContainer")]

[node name="Solution" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "Press this button to see an example solution to the current problem.

After you have done so, press next."
FocusObjects = [NodePath("../../../PullOutTabs/ProblemTab/MovingContainer/VBoxContainer/Tab/HBoxContainer/Solution")]

[node name="Submission" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "Press this button to submit your drawn diagram as a solution, you can also see how many unique solutions you'll need to find.

After you have submitted a solution, press next."
FocusObjects = [NodePath("../../../PullOutTabs/ProblemTab/MovingContainer/VBoxContainer/Tab/HBoxContainer/Submit")]

[node name="NextProblem" type="Node" parent="Tutorial/Steps" node_paths=PackedStringArray("FocusObjects")]
script = ExtResource("31_t51na")
text = "Press this button to go to the next problem, once you have found all required solutions.

Then press next."
FocusObjects = [NodePath("../../../PullOutTabs/ProblemTab/MovingContainer/VBoxContainer/Tab/HBoxContainer/NextProblem")]

[node name="Hadrons" type="Node" parent="Tutorial/Steps"]
script = ExtResource("31_rb52u")
text = "This problem requires you to draw hadrons. As shown, hadrons can be created by drawing quarks next to each other on state lines."
enable_spotlight = false
DiagramFilePath = "res://saves/Diagrams/hadrons.tres"

[node name="End" type="Node" parent="Tutorial/Steps"]
script = ExtResource("31_t51na")
text = "This is the end of the tutorial! Have fun! Check out the sandbox mode for randomly generated puzzles and other goodies!

Press finish when ready."
enable_spotlight = false

[connection signal="dropped" from="TileEasterEgg/Decoration" to="TileEasterEgg" method="_on_decoration_dropped"]
[connection signal="picked_up" from="TileEasterEgg/Decoration" to="TileEasterEgg" method="_on_decoration_picked_up"]
[connection signal="title_submitted" from="Diagram" to="." method="_on_diagram_title_submitted"]
[connection signal="text_changed" from="Diagram/TitleContainer/Title" to="Diagram/TitleContainer/Title" method="_on_text_changed"]
[connection signal="text_submitted" from="Diagram/TitleContainer/Title" to="Diagram" method="_on_title_text_submitted"]
[connection signal="vision_button_toggled" from="PullOutTabs/VisionButton" to="." method="_on_vision_button_toggled"]
[connection signal="diagram_deleted" from="PullOutTabs/ProblemTab" to="." method="_on_problem_tab_diagram_deleted"]
[connection signal="diagram_submitted" from="PullOutTabs/ProblemTab" to="." method="_on_problem_tab_diagram_submitted"]
[connection signal="next_problem_pressed" from="PullOutTabs/ProblemTab" to="." method="_on_next_problem_pressed"]
[connection signal="prev_problem_pressed" from="PullOutTabs/ProblemTab" to="." method="_on_prev_problem_pressed"]
[connection signal="exit_pressed" from="PullOutTabs/MenuTab" to="." method="_on_menu_tab_exit_pressed"]
[connection signal="toggled_line_labels" from="PullOutTabs/MenuTab" to="." method="_on_menu_tab_toggled_line_labels"]
[connection signal="export_pressed" from="PullOutTabs/ExportTab" to="." method="_on_export_tab_export_pressed"]
[connection signal="finish_pressed" from="Tutorial/TutorialInfo" to="." method="_on_tutorial_info_finish_pressed"]
[connection signal="next_pressed" from="Tutorial/TutorialInfo" to="Tutorial" method="_on_tutorial_info_next_pressed"]
[connection signal="prev_pressed" from="Tutorial/TutorialInfo" to="Tutorial" method="_on_tutorial_info_prev_pressed"]
[connection signal="next_step" from="Tutorial/Steps/ProblemTab" to="Tutorial" method="_on_problem_tab_next_step"]

[editable path="Diagram/DiagramArea/Initial"]
[editable path="Diagram/DiagramArea/Final"]
